--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-ui": "^0.20.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-image-gallery": "^1.2.4"
   }
 }
