--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.3",
     "firebase": "^10.12.3",
     "material-ui": "^0.20.2",
     "react": "^18.3.1",
