--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -26,7 +27,8 @@
     "styled-components": "^6.1.11",
     "typescript": "^4.4.2",
     "uuid": "^10.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
