--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
+    "swiper": "^11.1.14",
     "typescript": "^4.4.2",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.0",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-image-gallery": "^1.2.4"
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/swiper": "^6.0.0"
   }
 }
